--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hello Git!</h1>
     <p>This is the first file in my Git repo.</p>
+    <p>Another line added after commit.</p>
     
 </body>
 </html>
