Added git logo image to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello Git!</h1>
+    <img src="eyecatch_git.png" alt="Git logo">
     <p>This is the first file in my Git repo.</p>
     <p>Another line added after commit.</p>
     
