New image added to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="eyecatch_git.png" alt="Git logo">
     <p>This is the first file in my Git repo.</p>
     <p>Another line added after commit.</p>
+    <img src="hello_git_and_github.png" alt="Hello to git and github">
     
 </body>
 </html>
